[project]
name = "githubreadme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langgraph-supervisor>=0.0.31",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "typing>=3.10.0.0",
]

[tool.uv.workspace]
members = [
    "langraph",
]
